@@ -174,12 +174,6 @@ paparuda_m = {
 slavic_scandinavian_trade_m = {
 	global_trade_power = 0.1
 }
-bad_woodworking_m = {
-	build_cost = 0.1
-}
-zaltones_m = {
-	infantry_power = 0.1
-}
 red_polar_lights_m = {
 	land_morale = 0.1
 }
