@@ -2316,16 +2316,6 @@ on_bi_yearly_pulse_4 = {
 		100 = vn_baltic_events.3
 		100 = vn_baltic_events.4
 
-		100 = vn_religious_events.51
-		100 = vn_religious_events.52
-		100 = vn_religious_events.53
-		100 = vn_religious_events.54
-		100 = vn_religious_events.55
-		100 = vn_religious_events.56
-		100 = vn_religious_events.57
-		100 = vn_religious_events.58
-		100 = vn_religious_events.59
-		100 = vn_religious_events.60
 		100 = vn_religious_events.61
 		100 = vn_religious_events.62
 		100 = vn_religious_events.63
