@@ -1739,263 +1739,12 @@ country_event = {
 
     option = {
         name = "vn_baltic_events.4.a"
-        add_years_of_income = -0.25
+        add_years_of_income = -0.5
         add_war_exhaustion = -2
     }
     option = {
         name = "vn_baltic_events.4.b"
         add_war_exhaustion = -1
-    }
-}
-
-country_event = {
-	id = vn_religious_events.51
-	title = vn_religious_events.51.t
-	desc = vn_religious_events.51.d
-	picture = CITY_DEVELOPMENT_eventPicture
-	
-	is_triggered_only = yes
-	trigger = {
-        OR = {
-            religion = animism
-            religion = druwi
-            religion = dievturiba
-        }
-        NOT = { has_country_modifier = bad_woodworking_m }
-    }
-    mean_time_to_happen = { days = 1 }
-
-    option = {
-        name = "vn_religious_events.51.a"
-        add_country_modifier = {
-            name = bad_woodworking_m
-            duration = 1825
-        }
-    }
-}
-
-country_event = {
-	id = vn_religious_events.52
-	title = vn_religious_events.52.t
-	desc = vn_religious_events.52.d
-	picture = PRAYING_eventPicture
-	
-	is_triggered_only = yes
-	trigger = {
-        OR = {
-            religion = animism
-            religion = druwi
-            religion = dievturiba
-        }
-    }
-    mean_time_to_happen = { days = 1 }
-
-    option = {
-        name = "vn_religious_events.52.a"
-        add_prestige = -10
-    }
-}
-
-country_event = {
-	id = vn_religious_events.53
-	title = vn_religious_events.53.t
-	desc = vn_religious_events.53.d
-	picture = CULTURE_eventPicture
-	
-	is_triggered_only = yes
-	trigger = {
-        OR = {
-            religion = animism
-            religion = druwi
-            religion = dievturiba
-        }
-        NOT = { has_country_modifier = zaltones_m }
-    }
-    mean_time_to_happen = { days = 1 }
-
-    option = {
-        name = "vn_religious_events.53.a"
-        add_country_modifier = {
-            name = zaltones_m
-            duration = 1825
-        }
-    }
-}
-
-country_event = {
-	id = vn_religious_events.54
-	title = vn_religious_events.54.t
-	desc = vn_religious_events.54.d
-	picture = CULTURE_eventPicture
-	
-	is_triggered_only = yes
-	trigger = {
-        OR = {
-            religion = animism
-            religion = druwi
-            religion = dievturiba
-        }
-    }
-    mean_time_to_happen = { days = 1 }
-
-    option = {
-        name = "vn_religious_events.54.a"
-        add_stability = 1
-    }
-}
-
-country_event = {
-	id = vn_religious_events.55
-	title = vn_religious_events.55.t
-	desc = vn_religious_events.55.d
-	picture = CULTURE_eventPicture
-	
-	is_triggered_only = yes
-	trigger = {
-        OR = {
-            religion = animism
-            religion = druwi
-            religion = dievturiba
-        }
-        any_owned_province = {
-            base_production = 2
-        }
-    }
-    mean_time_to_happen = { days = 1 }
-
-    option = {
-        name = "vn_religious_events.55.a"
-        random_owned_province = {
-            limit = { base_production = 2 }
-            add_base_production = -1
-        }
-    }
-}
-
-country_event = {
-	id = vn_religious_events.56
-	title = vn_religious_events.56.t
-	desc = vn_religious_events.56.d
-	picture = RELIGION_eventPicture
-	
-	is_triggered_only = yes
-	trigger = {
-        OR = {
-            religion = animism
-            religion = druwi
-            religion = dievturiba
-        }
-    }
-    mean_time_to_happen = { days = 1 }
-
-    option = {
-        name = "vn_religious_events.56.a"
-        random_owned_area = {
-            add_unrest = -5
-        }
-    }
-}
-
-country_event = {
-	id = vn_religious_events.57
-	title = vn_religious_events.57.t
-	desc = vn_religious_events.57.d
-	picture = DEBATE_REPUBLICAN_eventPicture
-	
-	is_triggered_only = yes
-	trigger = {
-        OR = {
-            religion = animism
-            religion = druwi
-            religion = dievturiba
-        }
-    }
-    mean_time_to_happen = { days = 1 }
-
-    option = {
-        name = "vn_religious_events.57.a"
-        add_adm_power = 25
-    }
-    option = {
-        name = "vn_religious_events.57.b"
-        add_dip_power = 25
-    }
-    option = {
-        name = "vn_religious_events.57.c"
-        add_mil_power = 25
-    }
-}
-
-country_event = {
-	id = vn_religious_events.58
-	title = vn_religious_events.58.t
-	desc = vn_religious_events.58.d
-	picture = MILITARY_CAMP_eventPicture
-	
-	is_triggered_only = yes
-	trigger = {
-        OR = {
-            religion = animism
-            religion = druwi
-            religion = dievturiba
-        }
-        is_at_war = yes
-    }
-    mean_time_to_happen = { days = 1 }
-
-    option = {
-        name = "vn_religious_events.58.a"
-        add_war_exhaustion = -2
-    }
-}
-
-country_event = {
-	id = vn_religious_events.59
-	title = vn_religious_events.59.t
-	desc = vn_religious_events.59.d
-	picture = FEAST_eventPicture
-	
-	is_triggered_only = yes
-	trigger = {
-        OR = {
-            religion = animism
-            religion = druwi
-            religion = dievturiba
-        }
-        has_regency = no
-    }
-    mean_time_to_happen = { days = 1 }
-
-    option = {
-        name = "vn_religious_events.59.a"
-		add_republican_tradition = -10
-		add_legitimacy = -10
-        add_devotion = -10
-        add_horde_unity = -5
-    }
-}
-
-country_event = {
-	id = vn_religious_events.60
-	title = vn_religious_events.60.t
-	desc = vn_religious_events.60.d
-	picture = MILITARY_CAMP_eventPicture
-	
-	is_triggered_only = yes
-	trigger = {
-        OR = {
-            religion = animism
-            religion = druwi
-            religion = dievturiba
-        }
-    }
-    mean_time_to_happen = { days = 1 }
-
-    option = {
-        name = "vn_religious_events.60.a"
-        create_general = {
-            tradition = 40
-        }
     }
 }
 
