@@ -2897,45 +2897,13 @@
  vn_baltic_events.2.a: "This warrior is truly deserving of immortalization."
  vn_baltic_events.2.b: "Good for them."
  vn_baltic_events.3.t: "Magical Fern"
- vn_baltic_events.3.d: "On a night ride, [Root.Monarch.GetTitle] [Root.Monarch.GetName] noticed a strange glint in the bushes along the road. On closer inspection, [Root.Monarch.GetSheHe] could not believe [Root.Monarch.GetHerHis] eyes; [Root.Monarch.GetSheHe] was looking at the magnificent blossom of a fern as white as snow.\nWithout a doubt, this is a rare magical fern blossom that not only makes lucky finders omniscient, but also grants them the ability to read minds and understand the language of animals. However, such earthly riches are usually protected by witches and evil spirits, so [Root.Monarch.GetTitle] [Root.Monarch.GetName] must be careful if [Root.Monarch.GetSheHe] dares to pick the blossom."
- vn_baltic_events.3.a: "[Root.Monarch.GetSheHeCap] picks the glimmering bloom."
- vn_baltic_events.3.b: "Forget about the flower and this unholy place."
+ vn_baltic_events.3.d: "According to [Root.GetAdjective] folklore, the blossoms of certain ferns, which are said to have magical powers, open exactly at midnight of summer solstice. Those who are lucky enough to spot one of these rare flowers are said to become not only omniscient, but also gain the ability to read minds and understand the language of animals.\n\nTo track down these flowers, young and old visit the woods annually on this fabulous night. Even [Root.Monarch.GetTitle] [Root.Monarch.GetName] could try [Root.Monarch.GetHerHis] luck and set out tonight in search of the fern."
+ vn_baltic_events.3.a: "It's risky, but the promise of success prevails."
+ vn_baltic_events.3.b: "This is nonsense."
  vn_baltic_events.4.t: "Dividing the Spoils"
  vn_baltic_events.4.d: "The Gods assist us throughout our entire life, which is why we are compelled to provide regular and appropriate offerings in return.\nLately, our warriors have made plenty of prey, and without a doubt, we can do forego a part of it and offer it to the Gods. This act will please them and secure our future."
  vn_baltic_events.4.a: "Share our spoils."
  vn_baltic_events.4.b: "We need it for ourselves."
- vn_religious_events.51.t: "Bad Woodworking"
- vn_religious_events.51.d: "Our lumberjacks have felled only low quality wood in the last few weeks, as many forests are considered sacred and logging is forbidden there. Even our most skilled carpenters could not remedy this misery."
- vn_religious_events.51.a: "Tragic"
- vn_religious_events.52.t: "People without Scripture"
- vn_religious_events.52.d: "Our people have never developed their own writing system, which makes it difficult for us to preserve our cultural and religious traditions for future generations. If we want to become a modern state, we must change this urgently."
- vn_religious_events.52.a: "Sad"
- vn_religious_events.53.t: "Zaltones"
- vn_religious_events.53.d: "A ritual snake cult, originally practiced only in our most remote hinterlands, has now been adopted by much of our people. It may seem strange at first glance, but it also inspires our warriors to even greater fighting power."
- vn_religious_events.53.a: "Interesting"
- vn_religious_events.54.t: "Harmony with Nature"
- vn_religious_events.54.d: "Our priests are praising the religious devotion and the harmonious coexistence with nature in our nation. They consider us to be the most gracious people they know."
- vn_religious_events.54.a: "Wonderful"
- vn_religious_events.55.t: "Devastating Fire"
- vn_religious_events.55.d: "One of our villages was burned to the ground by a destructive conflagration. Our priests regard this as a punishment of the Gods for our infamous deeds."
- vn_religious_events.55.a: "Tragic"
- vn_religious_events.56.t: "Consecration of a Glade"
- vn_religious_events.56.d: "We have found a previously unknown clearing in one of our forests which, according to our priests, radiates a magical aura. It was therefore declared sacred and equipped with a religious shrine."
- vn_religious_events.56.a: "Wonderful"
- vn_religious_events.57.t: "Crisis of Faith"
- vn_religious_events.57.d: "Our priesthood is currently divided over the nature of our highest God Dieva. They agree that he is a symbol of creation, preservation and annihilation, but not what he represents most. What do we think?"
- vn_religious_events.57.a: "Above all, he is a generator"
- vn_religious_events.57.b: "Above all, he is a sustainer"
- vn_religious_events.57.c: "Above all, he is a destroyer"
- vn_religious_events.58.t: "For Faith and Justice"
- vn_religious_events.58.d: "We fight immeasurably to defend our territory against invaders and to push the borders forward at the same time. With the blessing of the Gods, we will prevail in this war! "
- vn_religious_events.58.a: "Very well"
- vn_religious_events.59.t: "Denunciation of the [Root.Monarch.GetTitle]"
- vn_religious_events.59.d: "The Criwe himself has questioned the rightful rule of [Root.Monarch.GetTitle] [Root.Monarch.GetName] due to alleged unreligiousness, which has caused confusion among our subjects. Many trust the Criwe in his decision, which is why they are currently unsure whether [Root.Monarch.GetSheHe] should remain our ruler."
- vn_religious_events.59.a: "Absurd!"
- vn_religious_events.60.t: "The Captain of [Root.GetName]"
- vn_religious_events.60.d: "One of our clan chieftains appreciates the rule of [Root.Monarch.GetTitle] and has therefore offered us a remarkable gift. He freed one of his best generals from his service and entrusted him to us. With this veteran under our direct control, we will win every battle from now on!"
- vn_religious_events.60.a: "Alright"
 #Finnish
  vn_religious_events.61.t: "Karhunpeijaiset"
  vn_religious_events.61.d: "Our hunters have brought down a bear, the most sacred animal of our faith. With a traditional ceremony we will not eat the meat, but we will free the spirit of the bear and make its reincarnation possible."
