@@ -2896,46 +2896,15 @@
  vn_baltic_events.2.d: "Ein ehemaliger [Root.GetAdjective]er Krieger, der schon lange tot ist, ist jedem unseres Volkes bekannt. Trotz der vielen Gerüchte und Legenden, die sich um ihn ranken, wissen wir mit Sicherheit, dass er vor Tapferkeit und Stärke nur so strotzte und sich um unser Volk verdient gemacht hat.\nAufgrund seines außergewöhnlichen Rufs hat sich inzwischen ein religiöser Kult um ihn gebildet, und selbst der Kriwe achtet und verehrt diesen Mann."
  vn_baltic_events.2.a: "Dieser Krieger hat es wahrlich verdient, unsterblich gemacht zu werden."
  vn_baltic_events.2.b: "Schön für sie."
+
  vn_baltic_events.3.t: "Magischer Farn"
- vn_baltic_events.3.d: "Bei einem nächtlichen Ausritt bemerkte [Root.Monarch.GetTitle] [Root.Monarch.GetName] ein seltsames Schimmern in den Büschen am Wegesrand. Bei näherer Betrachtung konnte [Root.Monarch.GetSheHe] seinen Augen nicht trauen; [Root.Monarch.GetSheHe] blickte auf die prächtige Blüte eines Farns so weiß wie Schnee.\nZweifelsohne handelt es sich hierbei um eine äußerst seltene magische Farnblüte, die den glücklichen Finder nicht nur allwissend macht, sondern ihm auch die Fähigkeit verleiht, Gedanken zu lesen und die Sprache der Tiere zu verstehen. Allerdings werden solche weltlichen Reichtümer normalerweise von Hexen und bösen Geistern beschützt, daher muss [Root.Monarch.GetTitle] [Root.Monarch.GetName] sehr achtsam sein, wenn [Root.Monarch.GetSheHe] es wagt, die Blüte zu pflücken."
- vn_baltic_events.3.a: "[Root.Monarch.GetSheHeCap] pflückt die schimmernde Blüte."
- vn_baltic_events.3.b: "Vergesst die Pflanze und diesen unheiligen Ort."
+ vn_baltic_events.3.d: "Laut [Root.GetAdjective]er Überlieferung öffnen sich die Blüten bestimmter Farne, denen magische Kräfte nachgesagt werden, genau um Mitternacht der Sommersonnenwende. Diejenigen, die das Glück haben, eine dieser seltenen Blüten zu entdecken, sollen nicht nur allwissend werden, sondern auch die Fähigkeit erlangen, Gedanken zu lesen und die Sprache der Tiere zu verstehen.\n\nUm diese Blumen aufzuspüren, besuchen Jung und Alt alljährlich in dieser märchenhaften Nacht den Wald. Auch [Root.Monarch.GetTitle] [Root.Monarch.GetName] könnte [Root.Monarch.GetHerHis] Glück versuchen und sich heute Nacht auf die Suche nach dem Farn machen."
+ vn_baltic_events.3.a: "Es ist riskant, aber die Aussicht auf Erfolg überwiegt."
+ vn_baltic_events.3.b: "Das ist Unsinn."
  vn_baltic_events.4.t: "Teilen der Beute"
  vn_baltic_events.4.d: "Die Götter stehen uns unser ganzes Leben lang bei, weshalb wir verpflichtet sind, im Gegenzug regelmäßige und angemessene Opfergaben darzubringen.\nIn letzter Zeit haben unsere Krieger viel Beute gemacht, und ohne Zweifel können wir auf einen Teil davon verzichten und ihn den Göttern opfern. Diese Geste wird sie erfreuen und unsere Zukunft sichern."
  vn_baltic_events.4.a: "Teilt unsere Beute."
  vn_baltic_events.4.b: "Wir brauchen sie für uns selbst."
- vn_religious_events.51.t: "Bad Woodworking"
- vn_religious_events.51.d: "Unsere Holzfäller haben in den letzten Wochen nur minderwertiges Holz geschlagen, da viele Wälder als heilig gelten und dort die Abholzung verboten ist. Selbst unsere erfahrensten Handwerker konnten dieses Problem nicht beheben."
- vn_religious_events.51.a: "Tragisch"
- vn_religious_events.52.t: "People without Scripture"
- vn_religious_events.52.d: "Unser Volk hat nie ein eigenes Schriftsystem entwickelt, was es uns schwer macht, unsere kulturellen und religiösen Traditionen für zukünftige Generationen zu bewahren. Wenn wir ein moderner Staat werden wollen, müssen wir dies dringend ändern."
- vn_religious_events.52.a: "Schade"
- vn_religious_events.53.t: "Schlangenbeschwörer"
- vn_religious_events.53.d: "Ein ritueller Schlangenkult, der ursprünglich nur in unserem abgelegensten Hinterland praktiziert wurde, ist inzwischen von einem Großteil unserer Bevölkerung übernommen worden. Es mag auf den ersten Blick seltsam erscheinen, aber es inspiriert auch unsere Krieger zu noch mehr Kampfkraft."
- vn_religious_events.53.a: "Interessant"
- vn_religious_events.54.t: "Harmonie mit der Natur"
- vn_religious_events.54.d: "Unsere Priester loben die religiöse Hingabe und das harmonische Zusammenleben mit der Natur in unserem Land. Sie betrachten uns als die anmutigsten Menschen, die sie kennen."
- vn_religious_events.54.a: "Großartig"
- vn_religious_events.55.t: "Verwüstende Feuersbrunst"
- vn_religious_events.55.d: "Eines unserer Dörfer wurde durch einen verheerenden Brand bis auf die Grundmauern niedergebrannt. Unsere Priester betrachten dies als eine Bestrafung der Götter für unsere schändlichen Taten."
- vn_religious_events.55.a: "Tragisch"
- vn_religious_events.56.t: "Einweihung einer Lichtung"
- vn_religious_events.56.d: "In einem unserer Wälder haben wir eine bisher unbekannte Lichtung gefunden, die nach Ansicht unserer Priester eine magische Aura ausstrahlt. Sie wurde daher für heilig erklärt und mit einem religiösen Schrein ausgestattet."
- vn_religious_events.56.a: "Ausgezeichnet"
- vn_religious_events.57.t: "Glaubenskrise"
- vn_religious_events.57.d: "Unser Priestertum ist derzeit gespalten über die Natur unseres höchsten Gottes Dievs. Sie sind sich einig, dass er ein Symbol für Schöpfung, Bewahrung und Vernichtung ist, aber nicht das, was er am meisten repräsentiert. Was denken wir darüber?"
- vn_religious_events.57.a: "Er ist vor allem ein Erschaffer"
- vn_religious_events.57.b: "Er ist vor allem ein Erhalter"
- vn_religious_events.57.c: "Er ist vor allem ein Zerstörer"
- vn_religious_events.58.t: "Für Glauben und Gerechtigkeit"
- vn_religious_events.58.d: "Wir kämpfen unermesslich, um unser Territorium gegen Eindringlinge zu verteidigen und gleichzeitig die Grenzen voranzutreiben. Mit dem Segen der Götter werden wir in diesem Krieg siegen!"
- vn_religious_events.58.a: "Sehr gut"
- vn_religious_events.59.t: "Denunziation [Root.GetMdesder] [Root.Monarch.GetTitle][GetMsMale]"
- vn_religious_events.59.d: "Der Criwe selbst hat die rechtmäßige Herrschaft von [Root.Monarch.GetTitle] [Root.Monarch.GetName] wegen angeblicher fehlender Religiosität in Frage gestellt, was zu Verwirrung unter unseren Untertanen geführt hat. Viele vertrauen dem Criwe in seiner Entscheidung, weshalb sie sich derzeit nicht sicher sind, ob [Root.Monarch.GetSheHe] [Root.GetMunserunsere] Herrscher[Root.GetMinFemale] bleiben soll."
- vn_religious_events.59.a: "Lächerlich!"
- vn_religious_events.60.t: "Der Hauptmann von [Root.GetName]"
- vn_religious_events.60.d: "Einer unserer Clanhäuptlinge schätzt die Herrschaft von [Root.Monarch.GetTitle] und hat uns deshalb ein außergewöhnliches Geschenk gemacht. Er entließ einen seiner besten Feldherren aus seinem Dienst und vertraute ihn uns an. Mit diesem Veteranen unter unserer direkten Kontrolle werden wir von nun an jeden Kampf gewinnen!"
- vn_religious_events.60.a: "In Ordnung"
 #Finnish
  vn_religious_events.61.t: "Karhunpeijaiset"
  vn_religious_events.61.d: "Unsere Jäger haben einen Bären zu Fall gebracht, das heiligste Tier unseres Glaubens. Mit einer traditionellen Zeremonie werden wir das Fleisch nicht essen, aber wir werden den Geist des Bären befreien und seine Wiedergeburt ermöglichen."
