@@ -491,10 +491,6 @@
  desc_paparuda_m: "Thanks to a successful rain ceremony, the gods have rewarded us with plenty of rainy days."
  slavic_scandinavian_trade_m: "Scandinavian Trade Relations"
  desc_slavic_scandinavian_trade_m: "We have attempted to intensify trade with Scandinavia."
- bad_woodworking_m: "Bad Woodworking"
- desc_bad_woodworking_m: "Our lumberjacks only felled low quality wood, which is not suitable for construction."
- zaltones_m: "Zaltones"
- desc_zaltones_m: "A ritual snake cult enhances the strength of our warriors."
  red_polar_lights_m: "Aurora Polaris"
  desc_red_polar_lights_m: "Polar lights have prophesied war for our realm."
  green_polar_lights_m: "Aurora Polaris"
