@@ -490,10 +490,6 @@
  desc_paparuda_m: "Dank einer erfolgreichen Regenzeremonie haben uns die Götter mit vielen Regentagen belohnt."
  slavic_scandinavian_trade_m: "Skandinavische Handelsbeziehungen"
  desc_slavic_scandinavian_trade_m: "Wir haben versucht, den Handel mit Skandinavien zu intensivieren."
- bad_woodworking_m: "Schlechte Holzbearbeitung"
- desc_bad_woodworking_m: "Unsere Holzfäller fällen nur minderwertiges Holz, das nicht für den Bau geeignet ist."
- zaltones_m: "Schlangenkult"
- desc_zaltones_m: "Ein ritueller Schlangenkult verstärkt die Stärke unserer Krieger."
  red_polar_lights_m: "Polarlichter"
  desc_red_polar_lights_m: "Polarlichter haben unserem Reich Krieg prophezeit."
  green_polar_lights_m: "Polarlichter"
