@@ -4,6 +4,7 @@
 
 -Reworked Toulouse's mission tree
 -Small fixes for the following mission trees: Brandenburg, Denmark, Altsachsen, Aragon, Frisia, England, Ifriqiya, Sicily, Athens, France, Berg/Cleves/Julich
+-Overhauled the following custom event sets: Baltic Pagan
 -Added 1 new estate privilege: 1 burghers privilege for Dutch nations
 -Added 8 more loading tips
 -Baltic Order techs should be definitively fixed now as the previous fix was not properly implemented... please let this be the last time.
